[gd_scene load_steps=2 format=3 uid="uid://dh484esd00sve"]

[ext_resource type="Script" path="res://scenes/lobby.gd" id="1_bj6be"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_bj6be")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.976471, 0, 0, 1)

[node name="IpLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Server IP Address
"

[node name="IPAddress" type="TextEdit" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="PortLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Server Port"

[node name="Port" type="TextEdit" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2

[node name="YourNameLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Your Name"

[node name="YourName" type="TextEdit" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2

[node name="ConnectToGame" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "ConnectToGame"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/ConnectToGame" to="." method="_on_connect_to_game_pressed"]
